--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="http://localhost:8080/assets/main.css" rel="stylesheet">
     <script>
       var _rollbarConfig = {
         accessToken: "bc37e9074f544386aa0bf55a590eda16",
@@ -20,5 +21,6 @@
       <div class="h-100" id="chat">
       </div>
     </div>
+    <script src="http://localhost:8080/assets/main.js" defer=""></script>
   </body>
 </html>
